[package]
name = "address"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81" }
bitcoin = { version = "0.31.1", features = ["serde"] }
rand = { version = "0.8.5" }
