[package]
name = "mnemonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81" }
bdk = { version = "0.29.0", features = ["keys-bip39"] }
rand = { version = "0.8.5" }
rand_core = { version = "0.6.4" }
